test/fail/enums_and_variants/inherit_enum.lly
#[
SyntaxError: 'Option' cannot be inherited from.
    from inherit_enum.lly:8
]#

enum Option[A] { Some(A) None }

class abc() < Option {
}
